...
                                        <rect key="frame" x="0.0" y="0.0" width="304" height="17"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Y7-PP-Ljg">
                                                <rect key="frame" x="0.0" y="0.0" width="50.5" height="17"/>
                                                <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
...
                        <outlet property="replyToSenderBtn" destination="36q-3j-f2v" id="eEN-Jo-ZZa"/>
                        <outlet property="sendAllReplyBtn" destination="9wP-ZT-Qgp" id="4Nb-2s-OSx"/>
                        <outlet property="sendBtn" destination="Sth-wk-KPC" id="cD4-JG-iiF"/>
                        <outlet property="titleField" destination="A3G-hT-npV" id="LCU-aw-m6u"/>
                    </connections>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Notifications" id="gey-eB-zPM">
                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="57n-7t-w0H">
                            <color key="tintColor" red="0.61568627450980395" green="0.78431372549019607" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="Ipd-No-gSG">
                            <color key="tintColor" red="0.61568627450980395" green="0.78431372549019607" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
        <scene sceneID="auj-tf-JUN">
            <objects>
                <viewController storyboardIdentifier="Login" id="w6p-tE-TnA" customClass="LoginVC" customModule="intouch" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="g0T-Qc-zsZ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xdG-dF-Zu6" userLabel="passwordTf">
                                        <rect key="frame" x="0.0" y="40" width="300" height="30"/>
                                        <accessibility key="accessibilityConfiguration" hint="username"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
...
        <scene sceneID="XKb-8a-hec">
            <objects>
                <viewController storyboardIdentifier="Create" title="Create" id="JUG-8k-JhV" customClass="createNotificationVC" customModule="intouch" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Qyg-7M-OhU">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VRq-yz-k2z" userLabel="titleTf">
                                                <rect key="frame" x="50.5" y="0.0" width="253.5" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="createTitle"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
...
                                            <pickerView contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="DYd-Gw-Lci" userLabel="pickerView">
                                                <rect key="frame" x="33" y="0.0" width="271" height="71"/>
                                                <accessibility key="accessibilityConfiguration" identifier="toPicker">
                                                    <accessibilityTraits key="traits" none="YES"/>
                                                </accessibility>
...
                                <rect key="frame" x="8" y="240.5" width="304" height="86.5"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="createMessage"/>
                                <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
            <objects>
                <navigationController restorationIdentifier="RecvNav" storyboardIdentifier="RecvNav" automaticallyAdjustsScrollViewInsets="NO" id="zSn-Qp-Fm6" userLabel="NavController" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="View" id="40I-57-PTU">
                        <color key="badgeColor" red="0.61568627450980395" green="0.78431372549019607" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                    </tabBarItem>
...
