...
                        <connections>
                            <outlet property="dataSource" destination="Rvf-Gc-pnk" id="Q1D-Wp-3He"/>
                            <outlet property="delegate" destination="Rvf-Gc-pnk" id="ofI-FW-knZ"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Notifications" id="gey-eB-zPM">
                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="57n-7t-w0H">
                            <color key="tintColor" red="0.61568627450980395" green="0.78431372549019607" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="toggleEditingMode:" destination="Rvf-Gc-pnk" id="V3t-kJ-QJU"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="Ipd-No-gSG">
                            <color key="tintColor" red="0.61568627450980395" green="0.78431372549019607" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="logout:" destination="Rvf-Gc-pnk" id="2cr-nw-Q5T"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            </objects>
            <point key="canvasLocation" x="527" y="457"/>
        </scene>
        <!--LoginVC-->
        <scene sceneID="auj-tf-JUN">
            <objects>
                <viewController storyboardIdentifier="Login" id="w6p-tE-TnA" customClass="LoginVC" customModule="intouch_ios" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="g0T-Qc-zsZ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MGa-T8-ayc">
                                <rect key="frame" x="10" y="184" width="300" height="109"/>
...
